fix horizontal scrolling issue

--- a/src/Falsum/Resources/css/railscast.css
+++ b/src/Falsum/Resources/css/railscast.css
@@ -3,7 +3,6 @@
 */
 .hljs {
   display: block;
-  overflow-x: auto;
   padding: 2px 0.5em;
   background: transparent;
   box-sizing: border-box;
